added my awesome green accent

--- a/md2pdfLib/presentation/pandoc/metadata.yml
+++ b/md2pdfLib/presentation/pandoc/metadata.yml
@@ -1,25 +1,18 @@
 ---
 theme:
   - awesome
-author: "Jonas Heinle"
+author: Jonas Heinle
 background: data/presentation/images/The World's First AI.jpg
 title: Create personal blog in flutter/dart
 subtitle: Cross platform UI toolkit for web
-email: support@jonasheinle.de
-institute: Institute of Software Engineering and Programming Languages
-uni: Ulm University
+institute: Institute of Muscle Building
+# uni: Life University
 location: Schwäbisch Hall
 date: \today
 pdf-engine-opts:
   - "-shell-escape"
+bibliography: data/presentation/latex/refs.bib,
 aspectratio: 169
-themeoptions:
-  - english
-  - color
-  - coloraccent=white,
-  - secslide
-  - listings
-  - footnote
 handout: true
 # background-image: data/presentation/images/22e2a944.jpg
 # include-in-header: data/presentation/latex/main.tex
