--- a/md2pdfLib/book/pandoc/metadata.yml
+++ b/md2pdfLib/book/pandoc/metadata.yml
@@ -2,10 +2,10 @@
 mainfont: DejaVuSerif
 title: Computer graphics
 subtitle: A practical approach
+titlepage: true
 author: Jonas Heinle
 date: \today
 documentclass: md2pdfLib/book/template/latex/bookclass
-toc: true
 highlight-style: md2pdfLib/pygments.theme
 toc-title: Table of contents
 linkcolor: blue
